--- a/src/index.html
+++ b/src/index.html
@@ -14,6 +14,8 @@
     />
   </head>
   <body>
+    <a routerLink="signup" class="links">Singup</a>
+    <a routerLink="login" class="links">Login</a>
     <app-root></app-root>
   </body>
 </html>
